--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="phone_reg_3">获取验证码</string>
     <string name="phone_forget_1">请输入新密码</string>
     <string name="phone_forget_2">重置密码</string>
+    <string name="addaim">添加目标</string>
+    <string name="settime">日期</string>
     <string name="title_activity_main">MainActivity</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
