--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,9 @@
     <string name="phone_forget_1">请输入新密码</string>
     <string name="phone_forget_2">重置密码</string>
     <string name="addaim">添加目标</string>
-    <string name="settime">日期</string>
+    <string name="time">日期</string>
+    <string name="settime">设置时间</string>
+    <string name="points">奖励点数</string>
     <string name="title_activity_main">MainActivity</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
