--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="phone_reg_3">获取验证码</string>
     <string name="phone_forget_1">请输入新密码</string>
     <string name="phone_forget_2">重置密码</string>
-    <string name="addaim">添加目标</string>
+    <string name="addaim">日程添加</string>
     <string name="time">日期</string>
     <string name="settime">设置时间</string>
     <string name="aim_time">请设置时间</string>
