--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,9 +27,15 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_add_aim">添加目标</string>
+    <string name="action_add_reward">添加奖励</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="add_re_dialog_fragment">添加奖励</string>
+    <string name="add_re_content">奖励内容</string>
+    <string name="add_re_costpoint">奖励所花奖励点</string>
+    <string name="sure">确定</string>
+
 
 </resources>
